--- a/articles.html
+++ b/articles.html
@@ -1,3 +1,7 @@
 SWEET TALKING DEMOTIVITATIONALS AND HOT ISSUE BRATS
-
-You’re either some sweet-talking demotivational who thinks he's the hotshot or a brat who’s got something to say on next week’s hot issue; You’re stuck in one of these two pitfalls, rilling as you hate the opposite. This came from your love of the Maslow's pyramid, didn’t it dimweed? Whether you follow it or not, there’s a great sense of potential in a person that comes from knowing and avoiding the Maslow’s pyramid. 
+<br>
+You’re either some sweet-talking demotivational who thinks he's the hotshot or a brat who’s got something to say on next week’s hot issue;
+You’re stuck in one of these two pitfalls, rilling as you hate the opposite. This came from your love of the Maslow's pyramid, didn’t it 
+dimweed? Whether you follow it or not, there’s a great sense of potential in a person that comes from knowing and avoiding the Maslow’s 
+pyramid. 
+<br> 
