--- a/articles.html
+++ b/articles.html
@@ -5,3 +5,8 @@ You’re stuck in one of these two pitfalls, rilling as you hate the opposite. T
 dimweed? Whether you follow it or not, there’s a great sense of potential in a person that comes from knowing and avoiding the Maslow’s 
 pyramid. 
 <br> 
+Take an actual second to look at it. Does anyone actually believe this shit? This is why we don’t have flying cars yet, you morons. 
+While the first 2 parts of this pyramid are obvious (no shit) I fail to understand the positions of the rest of these. 
+These lead you to absolute misery, to becoming some high smoke hippie in in the parking lot of your local coffee shop. 
+Hey man, i’m totally self fulfilled brother, you want a toke? Do you see yourself “self-fulfilled” in a life like that, man... 
+<br>
