--- a/articles.html
+++ b/articles.html
@@ -35,7 +35,7 @@ Truth is, you could be enjoying your life instead of pointlessly whining and com
 <br>
 <br> 
 Listen, to get back to Maslow’s pyramid, here’s what I suggest: Take the first base 2 parts of the triangle to heart, but chance is 
-you already have something settled for them. (even in a third world country). Third one’s alright I suppose, but it can be vague. 
+you already have something settled for them. Third one’s alright I suppose, but it can be vague. 
 Friends can help give a sense of reality, so i’m all for it. This is where you stop, and avoid going completely backwards where the 
 majority goes. You don’t need those last 2, they just kinda seem like a scam to render you to buy products or something (see private 
 consumerism) I’d say you don’t need them though. All you need is those basic 3, they are the real needs that will keep you alive. 
