--- a/articles.html
+++ b/articles.html
@@ -40,4 +40,4 @@ Friends can help give a sense of reality, so i’m all for it. This is where you
 majority goes. You don’t need those last 2, they just kinda seem like a scam to render you to buy products or something (see private 
 consumerism) I’d say you don’t need them though. All you need is those basic 3, they are the real needs that will keep you alive. 
 I’m not going to tell you what you need to do! That was what the Maslow's pyramid was trying to do. Go do something that hasn’t been 
-done before or something, but avoid life’s pitfalls.
+done before!
