--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -1,1 +1,2 @@
-WELCOME THESE ARE THE COMICS
+WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE
+<img src="/html/images/test.png" alt="Are you laughing now?">
