--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -1,2 +1,2 @@
 WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE
-<img src="/html/images/1.png" alt="Are you laughing now?">
+<img src="1.png" alt="Are you laughing now?">
