--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -1,2 +1,5 @@
 WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE
 <img src="1.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="2.png" alt="Are you laughing now?">
