--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -1,4 +1,4 @@
-WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE
+WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK ON OPEN IMAGE IN NEW TAB FOR FULL SIZE)
 <img src="1.png" alt="Are you laughing now?">
 <br>
 <br>
