--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -5,3 +5,6 @@ WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK O
 <img src="2.png" alt="Are you laughing now?">
 <br>
 <br>
+<img src="4.png" alt="Are you laughing now?">
+<br>
+<br>
