--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -8,4 +8,7 @@ WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK O
 <img src="4.png" alt="Are you laughing now?">
 <br>
 <br>
+<img src="6.png" alt="Are you laughing now?">
+<br>
+<br>
 <br>
