--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -14,5 +14,5 @@ WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK O
 WORKPLACE ARC CONCLUDED
 <br>
 <br>
-
+<img src="7.png" alt="Are you laughing now?">
 
