--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -17,3 +17,9 @@ WORKPLACE ARC CONCLUDED
 <img src="7.png" alt="Are you laughing now?">
 <br>
 <br>
+<img src="8.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="9.png" alt="Are you laughing now?">
+<br>
+<br>
