--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -24,4 +24,10 @@ WORKPLACE ARC CONCLUDED
 <img src="9.png" alt="Are you laughing now?">
 <br>
 <br>
+<img src="12.png" alt="Are you laughing now?">
 <br>
+<br>
+<img src="16.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="17.png" alt="Are you laughing now?">
