--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -33,3 +33,29 @@ WORKPLACE ARC CONCLUDED
 <img src="17.png" alt="Are you laughing now?">
 <br>
 <br>
+<br>
+<img src="19.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="20.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="21.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="23.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="24.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="25.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="27.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="28.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="29.png" alt="Are you laughing now?">
