--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -1,5 +1,6 @@
 https://youtu.be/p49XFR-CXCE
 WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK ON OPEN IMAGE IN NEW TAB FOR FULL SIZE)
+THANK YOU DRAKE FOR HELPING ME MAKE SOME OF THESE
 <img src="1.png" alt="Are you laughing now?">
 <br>
 <br>
