--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -1,7 +1,7 @@
 
 WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK ON OPEN IMAGE IN NEW TAB FOR FULL SIZE)
 THANK YOU DRAKE FOR HELPING ME MAKE SOME OF THESE
-<img src="1.png" alt="Are you laughing now?">
+<img src="1.png" alt="Add proper notes at a later date.">
 <br>
 <br>
 <img src="2.png" alt="Are you laughing now?">
@@ -62,3 +62,58 @@ WORKPLACE ARC CONCLUDED
 <img src="29.png" alt="Are you laughing now?">
 <br>
 <br>
+<img src="30.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="31.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="33.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="34.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="35.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="36.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="37.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="38.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="39.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="40.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="45.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="46.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="47.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="49.png" alt="Are you laughing now?">
+<br>
+<br>
+<img src="50.png" alt="Are you laughing now?">
+
+
+
+
+
+
+
+
+
+
+
+
