--- a/disco.html
+++ b/disco.html
@@ -1,2 +1,2 @@
 <img src="disco.gif" alt="Add proper notes at a later date.">
-<a href="SK.mp3">Play music</a>
+<a href="03 - SK.mp3">Play music</a>
