--- a/disco.html
+++ b/disco.html
@@ -1,2 +1,8 @@
 <img src="disco.gif" alt="Add proper notes at a later date.">
 <a href="03 - SK.mp3">Play music</a>
+<embed src="03 - SK.mp3" autostart="true" loop="true"
+width="2" height="0">
+</embed>
+<noembed>
+<bgsound src="03 - SK.mp3" loop="infinite">
+</noembed>
