--- a/disco.html
+++ b/disco.html
@@ -1,9 +1,9 @@
 <img src="disco.gif" alt="Add proper notes at a later date.">
-<embed src="03 - SK.mp3" autostart="true" loop="true"
+<embed src="Wxscan Music - Track 03.flac" autostart="true" loop="true"
 width="2" height="0">
 </embed>
 <noembed>
-<bgsound src="03 - SK.mp3" loop="infinite">
+<bgsound src="Wxscan Music - Track 03.flac" loop="infinite">
 </noembed>
 
  
