--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -100,7 +100,7 @@ WORKPLACE ARC CONCLUDED
 <img src="47.png" alt="Are you laughing now?">
 <br>
 <br>
-<img src="49.png" alt="Are you laughing now?">
+<img src="" alt="Are you laughing now?">
 <br>
 <br>
 <img src="50.png" alt="Are you laughing now?">
