--- a/stories.html
+++ b/stories.html
@@ -1,11 +1,37 @@
 <br>
 <br> 
-STORY 1
+All Saints' Eve 
+
+This one's devastating. One night I was watching phone videos of homeless people on a bench. 'Creole Man meets Homeless Man' and then 'American Homeless Man meets Canadian Homeless Man'. 
+It was your typical fare for the night. Through the fog I saw a savage man approach. Before I could say anything, he yelled at the top of his lungs: 
+
+-Gadzooks!...For Science! Eureka!
+
+Spit dripping down from his mouth, he told me about his newest bet on the Sportsball Yellow Socks Little League Team.
+
+-Why'd you bet on the Sportsball Yellow Socks Little League Team?
+
+Not responding, he began erratically yelling out 'Albert Einstein' and walked away.
+
+Share this nightmare-inducing story with your friends this holiday season.
 <br>
 <br> 
-STORY 2
+A horse walks into a bar.
+The horse says: The usual, please.                  
+The man responds: Why is there a horse in my bar?
 <br>
 <br> 
-STORY 3
+Bricks
+
+There once was a man named Petri Islo, he went up to a brick at the corner of a street, and the brick told him:
+''They don't make em like they used to.''
+And he was confused for a moment, looked around, looked both ways
+''Who said that?''
+And again and again he heard the brick at the corner of the street talking and murmuring;
+''Remember the 90s?''
+And the man said:
+''I have no idea who is talking currently. Please show yourself.''
+''Look again.''
+The brick had a comically large pipe in its mouth
 <br>
 <br> 
