--- a/stories.html
+++ b/stories.html
@@ -17,21 +17,32 @@ Share this nightmare-inducing story with your friends this holiday season.
 <br>
 <br> 
 A horse walks into a bar.
-The horse says: The usual, please.                  
+<br>
+The horse says: The usual, please.  
+<br>
 The man responds: Why is there a horse in my bar?
 <br>
 <br> 
-Bricks
+Brick Joke
 <br>
 There once was a man named Petri Islo, he went up to a brick at the corner of a street, and the brick told him:
+<br>
 ''They don't make em like they used to.''
+<br>
 And he was confused for a moment, looked around, looked both ways
+<br>
 ''Who said that?''
+<br>
 And again and again he heard the brick at the corner of the street talking and murmuring;
+<br>
 ''Remember the 90s?''
+<br>
 And the man said:
+<br>
 ''I have no idea who is talking currently. Please show yourself.''
+<br>
 ''Look again.''
+<br>
 The brick had a comically large pipe in its mouth
 <br>
 <br> 
