--- a/stories.html
+++ b/stories.html
@@ -20,7 +20,7 @@ A horse walks into a bar.
 <br>
 The horse says: The usual, please.  
 <br>
-The man responds: Why is there a horse in my bar?
+The bartender responds: Why is there a horse in my bar?
 <br>
 <br> 
 <br> 
