--- a/stories.html
+++ b/stories.html
@@ -46,3 +46,19 @@ And the man said:
 The brick had a comically large pipe in its mouth
 <br>
 <br> 
+<br>
+<br> 
+I went to my local museum, which had a sign up advertising the new T-Rex exhibit:
+<br> 
+DINOSAURS??? BIG, GIANT; ROAR! DINOSAURS ROAMING THE EARTH 600,000,000,000$$$ BILLION YEARS AGO??? 
+IN THE MUSEUMS YOU LEARN ABOUT THE DINOSAURS, THE BIG ONES BEFORE THE HUMANS, ROAAAAAAAAAR! CHOMP!
+ROAR!!! GIANT DINOSAURS, EARTH ROAMERS, BUT THEY GOT HIT BY BIG BIOLOGICAL DESTRUCTION! BIG WAVE THEORY! 
+BIG GIANT WAVE OR METEORITE THEORY! GREAT SCIENTISTS OF MODERN INDUSTRIAL WORLD PROVE ONCE AGAIN ORIGINS OF BIOLOGY, 
+BIG GIANT DINOSAURS! KABOOM! ROAAAAAAAAAAR!!! BIG GIANT DINOSAURS WALKED THE EARTH, CHOMP-WOW!!!
+<br> 
+Woah, I saw a T-Rex in Jurassic Park once. Those are so cool.
+<br>
+I entered into the museum, earlier than anticipated I'm guessing, and saw a massive pile of some book called Farenheit 451 being
+burned. I then entered the modernist style entrance to the building that said ''Ministry of Public Information''. Hmmm, that's
+a weird name for a museum.
+
