--- a/stories.html
+++ b/stories.html
@@ -60,7 +60,10 @@ BIG GIANT DINOSAURS! KABOOM! ROAAAAAAAAAAR!!! BIG GIANT DINOSAURS WALKED THE EAR
 <br> 
 Woah, I saw a T-Rex in Jurassic Park once. Those are so cool.
 <br>
-I entered into the museum, earlier than anticipated I'm guessing, and saw a massive pile of some book called Farenheit 451 being
-burned. I then entered the modernist style entrance to the building that said ''Ministry of Public Information''. Hmmm, that's
-a weird name for a museum.
+I entered into the museum, earlier than opening was anticipated I'm guessing, and saw a pile of some book called Farenheit 451 
+being burned. The entrance said ''Ministry of Public Information''. That's an odd name for a museum.
+Proceeding I saw a group of people assembling bones together for the museum and coming up with designs for the dinosaurs. 
+All in all a very a fun trip. I heard they're making a new Jurassic Park Movie next year. 
+<br> 
+<br> 
 
