--- a/stories.html
+++ b/stories.html
@@ -60,10 +60,10 @@ BIG GIANT DINOSAURS! KABOOM! ROAAAAAAAAAAR!!! BIG GIANT DINOSAURS WALKED THE EAR
 <br> 
 Woah, I saw a T-Rex in Jurassic Park once. Those are so cool.
 <br>
-I entered into the museum, earlier than opening was anticipated I'm guessing, and saw a pile of some book called Farenheit 451 
-being burned. The entrance said ''Ministry of Public Information''. That's an odd name for a museum.
-Proceeding I saw a group of people assembling bones together for the museum and coming up with designs for the dinosaurs. 
-All in all a very a fun trip. I heard they're making a new Jurassic Park Movie next year. 
+I entered into the museum.
+The entrance said ''Ministry of Public Information''. That's an odd name for a museum.
+Proceeding I saw a group of people assembling bones together and coming up with designs for the dinosaurs. 
+I heard they're making a new Jurassic Park Movie this year. All in all a very a fun trip. 
 <br> 
 <br> 
 
