--- a/relatblcomix.html
+++ b/relatblcomix.html
@@ -1,5 +1,6 @@
-WELCOME THESE ARE THE COMICS THEY WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK ON OPEN IMAGE IN NEW TAB FOR FULL SIZE)
-THANK YOU DRAKE FOR HELPING ME MAKE SOME OF THESE
+<p style = "font-family:MS UI Gothic;font-size:17px;">
+THESE COMICS WILL REMIND YOU OF YOUR EVERYDAY LIFE (CLICK ON OPEN IMAGE IN NEW TAB FOR FULL SIZE)
+SPECIAL THANKS TO JAMES FOR HELPING ME WITH THESE
 <img src="1.png" alt="Add proper notes at a later date.">
 <br>
 <br>
