--- a/relatblcomix2.html
+++ b/relatblcomix2.html
@@ -3,4 +3,13 @@ https://vektroid.bandcamp.com/track/heihu-org-cn-moon-fountain
 (THIS IS TEMPORARY. THESE VERSIONS ARE INCOMPLETE.)
 <br>
 <br>
+<img src="1_1.png">
 <br>
+<br>
+<img src="1_2.png">
+<br>
+<br>
+<img src="1_3.png">
+<br>
+<br>
+<img src="1_4.png">
