--- a/Links.html
+++ b/Links.html
@@ -1,3 +1,32 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
-Good-Night TOKYO (1992) https://youtu.be/KJQsGpCDX54
-Vektroid - heihu.org.cn MOON FOUNTAIN (2012) https://vektroid.bandcamp.com/track/heihu-org-cn-moon-fountain
+https://vektroid.bandcamp.com/track/heihu-org-cn-moon-fountain
+<br>
+https://vektroid.bandcamp.com/track/imystique-edu
+<br>
+https://vektroid.bandcamp.com/track/xx-ruby-dusk-on-a-2nd-life-nude-beach
+<br>
+https://vektroid.bandcamp.com/track/goodnight-bless-you-spirit
+<br>
+https://vektroid.bandcamp.com/track/420
+<br>
+https://vektroid.bandcamp.com/track/--4
+<br>  
+https://vektroid.bandcamp.com/track/aviation  
+<br> 
+
+  
+Good-Night TOKYO https://youtu.be/KJQsGpCDX54
+<br>
+SPORTS Japan JUDO https://youtu.be/2Y8RRQimmDg
+<br>
+  
+<br>
+  
+<br>
+  
+<br>
+  
+<br>
+
+
+
