--- a/Links.html
+++ b/Links.html
@@ -12,21 +12,30 @@ https://vektroid.bandcamp.com/track/420
 https://vektroid.bandcamp.com/track/--4
 <br>  
 https://vektroid.bandcamp.com/track/aviation  
-<br> 
-
-  
+<br>  
 Good-Night TOKYO https://youtu.be/KJQsGpCDX54
 <br>
 SPORTS Japan JUDO https://youtu.be/2Y8RRQimmDg
 <br>
-  
+柴又 https://youtu.be/FIw-HUP7XK0
 <br>
-  
+http://wizdumgun.tv/pages/mobile.html
 <br>
-  
+Kanye West Siiiiiiiiilver Surffffeeeeer Intermission https://youtu.be/SeeP7YhFy0Q
 <br>
-  
+Kanye West Every Hour https://youtu.be/T58tRXzjC7c
 <br>
+Kanye West Count Your Blessings https://youtu.be/ziww1uTlSNM
+<br>
+Satoru Shionoya - Brazilian Rhyme https://youtu.be/VIJgXvjUeqY
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 
 
 
