--- a/Links.html
+++ b/Links.html
@@ -29,14 +29,15 @@ Kanye West Count Your Blessings https://youtu.be/ziww1uTlSNM
 <br>
 Satoru Shionoya - Brazilian Rhyme https://youtu.be/VIJgXvjUeqY
 <br>
-<br>
 PORCO ROSSO Theme https://youtu.be/-umP_1oBNSk
 <br>
+Hiroshi Yoshimura Wet Land https://youtu.be/Z3m7HXeiHpg
 <br>
+Drekadrekadreka Faceless Robotic Government Thugs https://youtu.be/q7yRNERtm7s
 <br>
+DrekaDrekaDreka Slave Units https://youtu.be/pSnwbPwPbec
 <br>
-<br>
-
+  
 
 
 
