--- a/Links.html
+++ b/Links.html
@@ -39,6 +39,10 @@ DrekaDrekaDreka Slave Units https://youtu.be/pSnwbPwPbec
 <br>
 BLACKbusterCritic Skype chat with a 21 YEAR OLD MAN that likes WINX CLUB & BRATZ https://youtu.be/SfNqMhXFruk
 <br>
+Jerry & George Episode 1: Beans https://youtu.be/zaTngKokcCA
+<br>
+Jerry & George Episode 2: God https://youtu.be/c3BBINNPMv8
+<br>
   
 
 
