--- a/Links.html
+++ b/Links.html
@@ -43,7 +43,30 @@ Jerry & George Episode 1: Beans https://youtu.be/zaTngKokcCA
 <br>
 Jerry & George Episode 2: God https://youtu.be/c3BBINNPMv8
 <br>
+YTMND Soundtrack Volume 1 Track #13 https://youtu.be/9g1ou7q_xCs
+<br>
+Charles Manson Look At Your Game, Girl https://youtu.be/ncufspI_d60
+<br>
+Klaus Wunderlich Desafinado https://youtu.be/Z83TLgqKceo  
+<br>
+Klaus Wunderlich Copacabana/Manha de Carnaval/Triste https://youtu.be/Wz_c4jclCD8
+<br>
+B.J. Thomas Raindrops Keep Fallin' On My Head https://youtu.be/hziG9Nr6KHU
+<br>
+Jakob Bienenhalm LOL, Internet https://youtu.be/gqDvLeG1pgU
+<br>
+Geoff Muldaur Lazybones https://youtu.be/wsQhiHXGawg
+<br>
+Fedorantastic Valentines Cyber 8 https://youtu.be/3q7ql_Kkjzk
+<br>
+Village People I Wanna Shake Your Hand https://youtu.be/8qpUkPwUxGA
+<br>
+Randy Newman Short People https://youtu.be/v8UVBgUd9GE
+<br>
+Highrise View From Up Here 2002 https://youtu.be/kk6j1vZob3U
+<br>
+The Gonzo Tapes In Search of the American Dream https://youtu.be/HJoDOo9gpzU
+<br>
   
-
 
 
