--- a/Links.html
+++ b/Links.html
@@ -85,13 +85,13 @@ David & Steve Gordon Daybreak Appears https://youtu.be/VMDgw7R2IMM
 <br>
 Update Day Nirvana The Band The Show https://youtu.be/B_qnI1WrlnU
 <br> 
-  
+Vintage Velvet With Matches860!! https://youtu.be/wGwpnsePPf0
 <br>
-  
+Mumkey Jones This man was Canceled. I will UNCANCEL him. https://youtu.be/XQVj78MAQZI
 <br>
-  
+Mumkey Jones Bobobo-bo Bo-Bobo Mumkey's Anime Reviews #8 https://youtu.be/tpA4DOE7p9k
 <br>
-
+Burrito Galaxy 64 Credits Theme https://youtu.be/aOgT6GJmmMI
 <br>
   
 <br> 
