--- a/Links.html
+++ b/Links.html
@@ -93,5 +93,20 @@ Mumkey Jones Bobobo-bo Bo-Bobo Mumkey's Anime Reviews #8 https://youtu.be/tpA4DO
 <br>
 Burrito Galaxy 64 Credits Theme https://youtu.be/aOgT6GJmmMI
 <br>
-  
+Hot Plate Heaven At The Green Hotel 1984 https://youtu.be/vKn_V4paxJU
 <br> 
+Television Delivers People https://youtu.be/nbvzbj4Nhtk
+<br> 
+Maxwell's Silver Hammer https://youtu.be/3HuXFfq79I8
+<br> 
+[BasedKubo Subs] Davido-kun loves Japan [240p].avi https://youtu.be/d2FGgYp6mdk
+<br> 
+The Tragedy of Daniel Songer https://youtu.be/8NHIhDA9dwE
+<br> 
+Kid reenacts Undertale fight scene by himself for five minutes in theater class https://youtu.be/6CdG-ai61kM 
+<br> 
+Reiko You Just Got Breaded https://youtu.be/fYmVmDOmb2g
+<br> 
+
+  
+
