--- a/Links.html
+++ b/Links.html
@@ -107,6 +107,35 @@ Kid reenacts Undertale fight scene by himself for five minutes in theater class 
 <br> 
 Reiko You Just Got Breaded https://youtu.be/fYmVmDOmb2g
 <br> 
+Joey Karate - A Trained Assassin - Anderson Silva - Episode 0001 https://youtu.be/tkUBwXXbe1I
+<br> 
+Battlefield 1 - FREE BETA KEYS - [The Enraged Gamer] https://youtu.be/sMSuDcrwOFA
+<br> 
+Mugen Battle #2 ADOM vs Courage https://youtu.be/f0ogcfpR25Q
+<br> 
+Don't Watch an anime called "Boku" https://youtu.be/1k_nw9F_bOI
+<br> 
+Homebrew Browser Music (addicti.mod) https://youtu.be/XoapvzBzNC0
+<br>
+Foam Adventure (2009): Ultimate Cringe https://youtu.be/PLmD_69pXpk
+<br>
+Freak’n You (4Kids vers.) https://youtu.be/GYBb14tHWTk
+<br>
+The Big Man From Brooklyn Joe the Cop https://youtu.be/Ztv1r6ehumw
+<br>
+UK Freestyle https://youtu.be/RYxo8HwXDPU
+<br> 
+The Guy From Boston, Good News About Nuclear Destruction https://youtu.be/1Ulkvphmhtw
+<br> 
+Die, Baby Boomer, Die final baby boomer's suck parasites Richard S. Drake https://youtu.be/L0VJ-vxcRR0
+<br> 
+Dr. Strangelove - Ending https://youtu.be/s4VlruVG81w
+<br> 
+Gurren Lagann OST Disc 1 - 03 - Rap is Man's Soul! Believe in You'n the Restless Dude Showing the... https://youtu.be/5v3AV95jMqM
+<br> 
+
+<br> 
+  
 
   
 
