--- a/Links.html
+++ b/Links.html
@@ -133,9 +133,30 @@ Dr. Strangelove - Ending https://youtu.be/s4VlruVG81w
 <br> 
 Gurren Lagann OST Disc 1 - 03 - Rap is Man's Soul! Believe in You'n the Restless Dude Showing the... https://youtu.be/5v3AV95jMqM
 <br> 
-
+FCKN'BSTRDS..?.. noise trash https://youtu.be/Qw7T9dolkmM
 <br> 
-  
-
-  
+Monster's Inc, (Fan Film) [~IF I DIDN'T HAVE YOU~] https://youtu.be/nNpW8KZOVhw  
+<br> 
+The bird is the word - Family guy (Original uncensored) 1926 https://youtu.be/EAVrIFi9Leg
+<br> 
+Bart the General https://youtu.be/Y_6Kp7q5tbA
+<br>
+Space Dandy Ending 1 - X Jigen e Youkoso - Etsuko Yakushimaru https://youtu.be/hZ4aigq3dzw
+<br>
+Bonnerland/Hommer Simpson https://youtu.be/0Jh_IxUiW1I http://hutz.rocks/bonnerland.html
+<br>
+Numa Numa https://youtu.be/KmtzQCSh6xk
+<br>
+LISA: The Pointless "Mystics of Trash and Violence" Trailer https://youtu.be/D5kgkNvur8c
+<br>
+God as portrayed in Mind Game https://youtu.be/gz7vuwj3AlE  
+<br>
+Viewer Mail Time https://youtu.be/KZ-gf-BNwUE
+<br>
+Hayao Miyazaki's thoughts on an artificial intelligence https://youtu.be/ngZ0K3lWKRc
+<br>
+HWD_e07_Herbal-T (GFX cut, 4K) https://youtu.be/j0Gk0MLi-TI
+<br>
+Laibach: TV-Tednik interview - June '83 https://youtu.be/2ArtSJ1cQ-M
+<br>
 
