--- a/Links.html
+++ b/Links.html
@@ -1,4 +1,6 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
+INTERNET CLASSICS
+<br>
 https://vektroid.bandcamp.com/track/heihu-org-cn-moon-fountain
 <br>
 https://vektroid.bandcamp.com/track/imystique-edu
@@ -159,4 +161,20 @@ HWD_e07_Herbal-T (GFX cut, 4K) https://youtu.be/j0Gk0MLi-TI
 <br>
 Laibach: TV-Tednik interview - June '83 https://youtu.be/2ArtSJ1cQ-M
 <br>
-
+my little parody-derpy's adventure part 1 https://youtu.be/LyQBc1HXLpc
+<br>
+Neo Turf Masters Germany course music https://youtu.be/mNJMCZvzM2E
+<br>
+Mirror of the Soul Pentti Linkola 1997 https://youtu.be/CabTOLuSAxA
+<br>
+Front Mission 3 OST Barrier https://youtu.be/GQinmb7jy2U
+<br> 
+Evangelion Intermission https://youtu.be/NB2-5dszrOU
+<br>
+Triste https://youtu.be/F0q7gS5nifo
+<br>
+A History of Pineal Symbology in World Traditions & Religions https://youtu.be/u6QeV7q0Mlo
+  
+  
+  
+  
