--- a/Links.html
+++ b/Links.html
@@ -174,7 +174,40 @@ Evangelion Intermission https://youtu.be/NB2-5dszrOU
 Triste https://youtu.be/F0q7gS5nifo
 <br>
 A History of Pineal Symbology in World Traditions & Religions https://youtu.be/u6QeV7q0Mlo
-  
-  
-  
-  
+<br>
+Wake up call- for ad-guys, "creatives", designers
+<br>
+Grandmaster William Cheung Pressure Point Striking Seminar Day 1 https://youtu.be/sZ-8QPn62LY
+<br>
+Haku LIVE: Yubaba is a Bitch https://www.youtube.com/watch?v=DF8HhaVvkEs
+<br>
+葉書 Japanese Ambient Music https://youtu.be/cKekzMxxgBE
+<br>
+funny birds have a sword fight with their beaks ROFL https://youtu.be/n0qIgPIDy00  
+<br>
+Fred Herbert Findsh Out What The Big Thrill Is https://youtu.be/Q1NLqWCRLoU  
+<br>
+The Bum Hunter https://youtu.be/llWvmckVvyA 
+<br>
+A Message to Young People from Andrei Tarkovsky https://youtu.be/_Vvdtaaprzw 
+<br>
+Hiroshi Sato Jo Do https://youtu.be/OyfG1cRPXHw
+<br>
+Shooby Taylor Over the Rainbow https://youtu.be/u9MoBhMIC1M
+<br>
+CUP-A-SOUP https://youtu.be/QBvrPSJhCGQ
+<br> 
+Harold and Kumar go to white castle ( IMPT LIFE LESSON!) ;) https://youtu.be/6qweMOnPmXM
+<br> 
+Fartmaul https://youtu.be/mNXmC95Zdyw
+<br>   
+Cat Phuckers - lolitagurl.avi https://youtu.be/Z4vKuCs1YvU
+<br>   
+Cornfed Politics https://youtu.be/kjkBoABDKjw
+<br>   
+Takashi Kokubo (小久保隆) - Oasis Of The Wind ～ Forest Of Ion ～https://youtu.be/YEgmpe8nToU
+<br> 
+カリンバ（ゆめにっき）https://youtu.be/3a0gd-eU1DA
+<br> 
+How To Take An Onsen https://youtu.be/2paBTzpwzt8
+<br>  
