--- a/Links.html
+++ b/Links.html
@@ -195,6 +195,8 @@ Hiroshi Sato Jo Do https://youtu.be/OyfG1cRPXHw
 <br>
 Shooby Taylor Over the Rainbow https://youtu.be/u9MoBhMIC1M
 <br>
+Charls Carroll The Soy Diet https://youtu.be/aiUBhopvpFs
+<br>
 CUP-A-SOUP https://youtu.be/QBvrPSJhCGQ
 <br> 
 Harold and Kumar go to white castle ( IMPT LIFE LESSON!) ;) https://youtu.be/6qweMOnPmXM
@@ -211,4 +213,5 @@ Takashi Kokubo (小久保隆) - Oasis Of The Wind ～ Forest Of Ion ～https://y
 <br> 
 How To Take An Onsen https://youtu.be/2paBTzpwzt8
 <br>  
+motivation.mp4 https://youtu.be/17Yh1kwQlPM
 <br>  
