--- a/Links.html
+++ b/Links.html
@@ -175,7 +175,7 @@ Triste https://youtu.be/F0q7gS5nifo
 <br>
 A History of Pineal Symbology in World Traditions & Religions https://youtu.be/u6QeV7q0Mlo
 <br>
-Wake up call- for ad-guys, "creatives", designers
+Wake up call- for ad-guys, "creatives", designers https://www.youtube.com/watch?v=FLb7mgYU-qI
 <br>
 Grandmaster William Cheung Pressure Point Striking Seminar Day 1 https://youtu.be/sZ-8QPn62LY
 <br>
