--- a/Links.html
+++ b/Links.html
@@ -208,6 +208,8 @@ Cat Phuckers - lolitagurl.avi https://youtu.be/Z4vKuCs1YvU
 Cornfed Politics https://youtu.be/kjkBoABDKjw
 <br>   
 Takashi Kokubo (小久保隆) - Oasis Of The Wind ～ Forest Of Ion ～https://youtu.be/YEgmpe8nToU
+<br>  
+chuggaaconroy Pikmin 2 - Episode 26
 <br> 
 カリンバ（ゆめにっき）https://youtu.be/3a0gd-eU1DA
 <br> 
