--- a/Links.html
+++ b/Links.html
@@ -209,7 +209,7 @@ Cornfed Politics https://youtu.be/kjkBoABDKjw
 <br>   
 Takashi Kokubo (小久保隆) - Oasis Of The Wind ～ Forest Of Ion ～https://youtu.be/YEgmpe8nToU
 <br>  
-chuggaaconroy Pikmin 2 - Episode 26
+chuggaaconroy Pikmin 2 - Episode 26 https://youtu.be/HCSwYhd9yto
 <br> 
 カリンバ（ゆめにっき）https://youtu.be/3a0gd-eU1DA
 <br> 
