--- a/Links.html
+++ b/Links.html
@@ -211,6 +211,10 @@ Takashi Kokubo (小久保隆) - Oasis Of The Wind ～ Forest Of Ion ～https://y
 <br>  
 chuggaaconroy Pikmin 2 - Episode 26 https://youtu.be/HCSwYhd9yto
 <br> 
+Nemuru Mayu https://youtu.be/p49gP6m0JW0
+<br>  
+LSD Dream Emulator https://youtu.be/yK6FVYz5YeQ 
+<br> 
 カリンバ（ゆめにっき）https://youtu.be/3a0gd-eU1DA
 <br> 
 How To Take An Onsen https://youtu.be/2paBTzpwzt8
