--- a/stories.html
+++ b/stories.html
@@ -66,9 +66,19 @@ The entrance said ''Ministry of Public Information''. That's an odd name for a m
 Proceeding I saw a group of people assembling bones together and coming up with designs for the dinosaurs. 
 I heard they're making a new Jurassic Park Movie this year. All in all a very a fun trip. 
 <br> 
+<br>
 <br> 
 <br> 
+The only philosopher I listen to is Big Lenny.
 <br> 
+<br> 
+The Lenny Stories 
+<br> 
+<br> 
+Lenny kept dying so the story needed a new Lenny
+<br> 
+<br> 
+We got to Lenny 5 or 6
 <br>
 <br>
 
