--- a/religion.html
+++ b/religion.html
@@ -1,1 +1,2 @@
 <iframe style="width: 182px; height: 358px; border: 1px solid #ddd;" scrolling="no" src="https://www.islamicfinder.org/prayer-widget/"> </iframe>
+<img src="Salah.jpg">
