--- a/Human_Beings.html
+++ b/Human_Beings.html
@@ -1,2 +1,17 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 <a href="https://youtu.be/CwsIxXrclKY?t=170">HUMAN BEINGS</a>
+<br>
+<br>
+<img src="Human_Beings1.png">
+<br>
+<br>
+<img src="Human_Beings2.png">
+<br>
+<br>
+<img src="Human_Beings3.png">
+<br>
+<br>
+<img src="Human_Beings4.png">
+<br>
+<br>
+<img src="Human_Beings5.png">
