--- a/Human_Beings.html
+++ b/Human_Beings.html
@@ -2,18 +2,18 @@
 <a href="https://youtu.be/CwsIxXrclKY?t=170">HUMAN BEINGS</a>
 <br>
 <br>
-<img src="Human_Beings1.png">
+<img src="Human_Beings1.jpg">
 <br>
 <br>
-<img src="Human_Beings2.png">
+<img src="Human_Beings2.jpg">
 <br>
 <br>
-<img src="Human_Beings3.png">
+<img src="Human_Beings3.jpg">
 <br>
 <br>
-<img src="Human_Beings4.png">
+<img src="Human_Beings4.jpg">
 <br>
 <br>
-<img src="Human_Beings5.png">
+<img src="Human_Beings5.jpg">
 <br>
 <br>
