--- a/drawings.html
+++ b/drawings.html
@@ -1,6 +1,6 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 UNREAL DEPICTIONS OF EVENTS AND PERSONS:
 <br>
-<a href="Large_Scene.html">LARGE SCENE AT THE HEART OF SEAPORT 
+<a href="Large_Scene.html">LARGE SCENE
 <br>
 <a href="Human_Beings.html">HUMAN BEINGS
