--- a/prayer.html
+++ b/prayer.html
@@ -1,5 +1,6 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 <iframe style="width: 182px; height: 358px; border: 1px solid #ddd;" scrolling="no" src="https://www.islamicfinder.org/prayer-widget/"> </iframe>
 <br>
-https://upload.wikimedia.org/wikipedia/commons/6/60/Salat_or_Muslim_Prayers_-_Illustration_showing_the_sequence_and_recitations_made_in_each_posture.jpg
+<a href="https://upload.wikimedia.org/wikipedia/commons/6/60/Salat_or_Muslim_Prayers_-_Illustration_showing_the_sequence_and_recitations_made_in_each_posture.jpg">https://upload.wikimedia.org/wikipedia/commons/6/60/Salat_or_Muslim_Prayers_-_Illustration_showing_the_sequence_and_recitations_made_in_each_posture.jpg </a>
+
 <br>
