--- a/Human_Beings.html
+++ b/Human_Beings.html
@@ -17,3 +17,19 @@
 <img src="Human_Beings5.jpg">
 <br>
 <br>
+<img src="Human_Beings6.jpg">
+<br>
+<br>
+<img src="Human_Beings7.jpg">
+<br>
+<br>
+<img src="Human_Beings8.jpg">
+<br>
+<br>
+<img src="Human_Beings9.jpg">
+<br>
+<br>
+<img src="Human_Beings10.jpg">
+<br>
+<br>
+
