--- a/Human_Beings.html
+++ b/Human_Beings.html
@@ -32,4 +32,17 @@
 <img src="Human_Beings10.jpg">
 <br>
 <br>
+<img src="Human_Beings11.jpg">
+<br>
+<br>
+<img src="Human_Beings12.jpg">
+<br>
+<br>
+<img src="Human_Beings13.jpg">
+<br>
+<br>
+<img src="Human_Beings14.jpg">
+<br>
+<br>
+<img src="Human_Beings15.jpg">
 
