--- a/real_stories.html
+++ b/real_stories.html
@@ -1,4 +1,18 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
-Under Construction. Very basic versions of pages.
-
+Under Construction. Very basic versions of pages. Needs better visual organization. And Reorganization of ideas.
+<br>
+<br>
+TABLE OF CONTENTS
+1. Companies & Shareholders
+2. Medias & Language Control
+3. Food & Water Supply
+4. Hedonism & Consumption
+5. Neutrality & Demoralization
+6. Distractions, Vanity, God Complex & Fads
+7. Population Numbers & Number Games
+8. Unbelief
+9. Computer UI, Web Aesthetics & Technology
+10. Copyright & Piracy
+11. World Conspiracies
+  
 
