--- a/real_stories.html
+++ b/real_stories.html
@@ -3,16 +3,29 @@ Under Construction. Very basic versions of pages. Needs better visual organizati
 <br>
 <br>
 TABLE OF CONTENTS
+<br>
+0. Unbelief
+<br>
 1. Companies & Shareholders
+<br>
 2. Medias & Language Control
+<br>
 3. Food & Water Supply
+<br>
 4. Hedonism & Consumption
+<br>
 5. Neutrality & Demoralization
+<br>
 6. Distractions, Vanity, God Complex & Fads
+<br>
 7. Population Numbers & Number Games
-8. Unbelief
-9. Computer UI, Web Aesthetics & Technology
-10. Copyright & Piracy
-11. World Conspiracies
+<br>
+8. Computer UI, Web Aesthetics & Technology
+<br>
+9. Copyright & Piracy
+<br>
+10. World Conspiracies
+<br>
+& More as time goes on
   
 
