--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -1,4 +1,5 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
-Forcing people into unbelief is a graver sin than slaughter - The Quran 2:217
+"Forcing people into unbelief is a graver sin than slaughter" The Quran 2:217
 <br>
 <br>
+   
