--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -1,5 +1,7 @@
 <p style = "font-family:MS UI Gothic;font-size:19px;">
-The Quran 2:217 Forcing people into unbelief is a graver sin than slaughter 
+The Quran 2:217 
+<br>
+Forcing people into unbelief is a graver sin than slaughter. 
 <br>
 "font-family:MS UI Gothic;font-size:17px;">
 <br>
