--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -3,6 +3,6 @@ The Quran 2:217
 <br>
 Forcing people into unbelief is a graver sin than slaughter. 
 <br>
-"font-family:MS UI Gothic;font-size:17px;">
+<p style = "font-family:MS UI Gothic;font-size:17px;">
 <br>
    
