--- a/Links.html
+++ b/Links.html
@@ -1,4 +1,4 @@
-(unlisted)
+(unlisted) Music is fair game sometimes, use your judgement 
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 INTERNET CLASSICS
 <br>
@@ -225,3 +225,13 @@ MDE - Rental Car Reviews https://youtu.be/-2m5BAl2ny0
 They Live Soundtrack - A Message https://youtu.be/7SrrBnhqRxo
 <br> 
 Bail Bondsman song parodies https://thebailbondshelectric20.bandcamp.com/album/bail-bondsman-song-parodies-2010s
+<br>  
+https://www.youtube.com/watch?v=z1XS6SycErA バラ'ストリート
+<br>  
+https://youtu.be/5_Dfsc05ve8 S e c r e t V H S
+<br>  
+https://youtu.be/dClKPzjyHns Shinjuku Underground District
+<br>
+https://windows96.bandcamp.com/track/tranquility-path
+<br>
+https://youtu.be/gubKMZyO9Tk KAMAITACHI - DJ TECHNORCH fw. GUHROOVY
