--- a/stories.html
+++ b/stories.html
@@ -83,3 +83,52 @@ We got to Lenny 5 or 6
 <br>
 <br> 
 <br> 
+Two illuminati trilateral commission CIA United Nations members talking to eachother
+<br> 
+<br> 
+AH GEEZ DOOD
+<br> 
+ILLUMINATI_STEVE, WHAT ARE WE GOING TO NAME THE UNBELIEF GOD?
+<br> 
+I DONT KNOW ILLUMINATI_MIKE, WHAT ARE WE GOING TO CALL IT?
+<br> 
+DUDE, DUDE IVE GOT IT
+<br> 
+TAKE THE LETTERS THAT MAKE SATAN, AND REARRANGE THEM THAT WAYS
+<br> 
+SANTA
+<br> 
+DUDE, YOU'RE A GENIUS!
+<br> 
+<br> 
+<br> 
+<br> 
+It's a sunny day in the Smileshappy City Autonomous Democratic Block. Jonestown Massacre heads to his compulsory education 
+Net_Classroom (courtesy of BOBO_NET). 
+<br> 
+<br> 
+Fight the System plays on the intercom. 
+<br> 
+<br> 
+He meets with a friend, Johnny Columbine. If you were from around these parts, you were sure to know him... Bright guy. 
+Sticked his britches a little too close to the pole though, if you know what I mean. 
+<br> 
+<br> 
+J. Columbine had answered an email from AD-PUNCH, and so when you'd talk to him, he would begin:
+<br> 
+<br> 
+-Have you ever heard of FORD MOTORCLASS? I've been looking at FORD MOTORCLASS recently. 
+<br> 
+<br> 
+-Haven't heard of FORD MOTORCLASS, Johnny. Thanks for letting me know. 
+<br> 
+<br> 
+The sound of planes roar the sky. Jonestown overhears a conversation about sex from the other side of the classroom. Oh,
+it's just Isla Vista Shooting Smith. She received implants at age -5 because she felt her unexistence needed more 'pazzaz'.
+<br> 
+<br> 
+The anthem of UNCOM begins playing on the intercom. To venerate UNCOM UNITED NATIONS BRANCH, every single school topic has 
+been changed with Science. For Science! Eureka! shout the students who hold close to their hearts Tony Stark from the classic
+movie Ironman 1.
+<br> 
+<br> 
