--- a/stories.html
+++ b/stories.html
@@ -132,3 +132,17 @@ been changed with Science. For Science! Eureka! shout the students who hold clos
 movie Ironman 1.
 <br> 
 <br> 
+<br> 
+<br> 
+Johnny went to a local restaurant called Henry's Ale 
+<br> 
+<br> 
+The waiter held a surprised expression and screamed.
+<br> 
+<br> 
+He then noticed he had entered the local restaurant naked with a swastika painted on his chest
+<br> 
+<br> 
+Woops!
+<br> 
+<br> 
