--- a/0Unbelief.html
+++ b/0Unbelief.html
@@ -3,6 +3,11 @@ The Quran 2:217
 <br>
 Forcing people into unbelief is a graver sin than slaughter. 
 <br>
+<br>
+Matthew 18:6
+<br>  
+If anyone causes one of these little ones--those who believe in me--to stumble, it would be better for them to have a large millstone hung around their neck and to be drowned in the depths of the sea.
+<br>
 <p style = "font-family:MS UI Gothic;font-size:17px;">
 <br>
 <br>   
