--- a/real_stories.html
+++ b/real_stories.html
@@ -4,9 +4,9 @@ Under Construction. Very basic versions of pages. Needs better visual organizati
 <br>
 TABLE OF CONTENTS
 <br>
-<a href="0Unbelief.html">0. Unbelief 
+<a href="0Unbelief.html">0.Unbelief 
 <br>
-1. Companies & Shareholders
+<a href="1Companies.html">1.Companies & Shareholders 
 <br>
 2. Medias & Language Control
 <br>
