--- a/real_stories.html
+++ b/real_stories.html
@@ -1,5 +1,5 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
-Under Construction. Very basic versions of pages. Needs better visual organization. And Reorganization of ideas. Also make .txt versions
+Under Construction. Very basic versions of pages. Needs better visual organization. And Reorganization of ideas. Also make .txt 
 <br>
 <br>
 TABLE OF CONTENTS
