--- a/1Companies.html
+++ b/1Companies.html
@@ -1,14 +1,34 @@
 <p style = "font-family:MS UI Gothic;font-size:17px;">
-<br>
 Companies have one goal and it is to make money. Given the opportunity, a company will resort to any tactics they can to make more money. 
 Offshore tax shelters, rent-seeking, indentured servitude & sweat shops are all possibilities if an executive decides they will increase
 revenue for the new version of Angry Birds. Always pay attention when a company makes a small donation with every purchase to Africa,
 it is an intentional means of controlling your guilt when consuming a product. 
 <br>
+<br>
 Never forget that when a brand donates to or supports a cause, it's only because an executive pointed out that it would be beneficial for 
 their bottom line. If Hitler came back from the dead and you could make 500 million dollars by supplying him weapons and ammunition by making 
 a public donation of 10 million dollars, any company would jump on it. Economic survival is the priority.
 <br>
-Shareholders buy stock in companies and don't even know what the companies do. -Television Delivers
 <br>
-Quote from Propaganda by Edward Bernays, Business & The Public
+<p style = "font-family:MS UI Gothic;font-size:15px;">
+Shareholders buy stock in companies and don't even know what the companies do. (Television Delivers People)
+<br>
+<br>
+<a href="http://www.historyisaweapon.org/defcon1/bernprop.html">As a matter of fact, the practice of propaganda since the war has assumed very different forms from those prevalent twenty years ago. This new technique may fairly be called the new propaganda.
+It takes account not merely of the individual, nor even of the mass mind alone, but also and especially of the anatomy of society, with its interlocking group formations and loyalties. It sees the individual not only as a cell in the social organism but as a cell organized into the social unit. Touch a nerve at a sensitive spot and you get an automatic response from certain specific members of the organism. 
+<br>
+<br> 
+Business offers graphic examples of the effect that may be produced upon the public by interested groups, such as textile manufacturers losing their markets. This problem arose, not long ago, when the velvet manufacturers were facing ruin because their product had long been out of fashion. Analysis showed that it was impossible to revive a velvet fashion within America. Anatomical hunt for the vital spot! Paris! Obviously! But yes and no. Paris is the home of fashion. Lyons is the home of silk. The attack had to be made at the source. It was determined to substitute purpose for chance and to utilize the regular sources for fashion distribution and to influence the public from these sources. A velvet fashion service, openly supported by the manufacturers, was organized. Its first function was to establish contact with the Lyons manufactories and the Paris couturiers to discover what they were doing, to encourage them to act on behalf of velvet, and to help in the proper exploitation of their wares. An intelligent Parisian was enlisted in the work. He visited Lanvin and Worth, Agnes and Patou, and others and induced them to use velvet in their gowns and hats. It was he who arranged for the distinguished Countess This or Duchess That to wear the hat or the gown. And as for the presentation of the idea to the public, the American buyer or the American woman of fashion was simply shown the velvet creations in the atelier of the dressmaker or the milliner. She bought the velvet because she liked it and because it was in fashion. 
+<br>
+<br>  
+The editors of the American magazines and fashion reporters of the American newspapers, likewise subjected to the actual (although created) circumstance, reflected it in their news, which, in turn, subjected the buyer and the consumer here to the same influences. The result was that what was at first a trickle of velvet became a flood. A demand was slowly, but deliberately, created in Paris and America. A big department store, aiming to be a style leader, advertised velvet gowns and hats on the authority of the French couturiers, and quoted original cables received from them. The echo of the new style note was heard from hundreds of department stores throughout the country which wanted to be style leaders too. Bulletins followed despatches. The mail followed the cables. And the American woman traveler appeared before the ship news photographers in velvet gown and hat. 
+<br>
+<br>  
+The created circumstances had their effect. "Fickle fashion has veered to velvet," was one newspaper comment. And the industry in the United States again kept thousands busy. 
+<br>
+<br> 
+The new propaganda, having regard to the constitution of society as a whole, not infrequently serves to focus and realize the desires of the masses. A desire for a specific reform, however widespread, cannot be translated into action until it is made articulate, and until it has exerted sufficient pressure upon the proper law-making bodies. Millions of housewives may feel that manufactured foods deleterious to health should be prohibited. But there is little chance that their individual desires will be translated into effective legal form unless their halfexpressed demand can be organized, made vocal, and concentrated upon the state legislature or upon the Federal Congress in some mode which will produce the results they desire. Whether they realize it or not, they call upon propaganda to organize and effectuate their demand. 
+<br>
+<br> 
+ But clearly it is the intelligent minorities which need to make use of propaganda continuously and systematically. In the active proselytizing minorities in whom selfish interests and public interests coincide lie the progress and development of America. Only through the active energy of the intelligent few can the public at large become aware of and act upon new ideas.
+      Small groups of persons can, and do, make the rest of us think what they please about a given subject. But there are usually proponents and opponents of every propaganda, both of whom are equally eager to convince the majority. 
