--- a/1Companies.html
+++ b/1Companies.html
@@ -1,4 +1,4 @@
-<p style = "font-family:MS UI Gothic;font-size:16px;">
+<p style = "font-family:MS UI Gothic;font-size:17px;">
 Companies have one goal and it is to make money. Given the opportunity, a company will resort to any tactics they can to make more money. 
 Offshore tax shelters, rent-seeking, indentured servitude & sweat shops are all possibilities if an executive decides they will increase
 revenue for the new version of Angry Birds. Always pay attention when a company makes a small donation with every purchase to Africa,
@@ -10,7 +10,7 @@ their bottom line. If Hitler came back from the dead and you could make 500 mill
 a public donation of 10 million dollars, any company would jump on it. Economic survival is the priority.
 <br>
 <br>
-<p style = "font-family:MS UI Gothic;font-size:14px;">
+<p style = "font-family:MS UI Gothic;font-size:17px;">
 Shareholders buy stock in companies and don't even know what the companies do. (Television Delivers People)
 <br>
 <br>
@@ -30,4 +30,4 @@ The created circumstances had their effect. "Fickle fashion has veered to velvet
 The new propaganda, having regard to the constitution of society as a whole, not infrequently serves to focus and realize the desires of the masses. A desire for a specific reform, however widespread, cannot be translated into action until it is made articulate, and until it has exerted sufficient pressure upon the proper law-making bodies. Millions of housewives may feel that manufactured foods deleterious to health should be prohibited. But there is little chance that their individual desires will be translated into effective legal form unless their halfexpressed demand can be organized, made vocal, and concentrated upon the state legislature or upon the Federal Congress in some mode which will produce the results they desire. Whether they realize it or not, they call upon propaganda to organize and effectuate their demand. 
 <br>
 <br> 
- But clearly it is the intelligent minorities which need to make use of propaganda continuously and systematically. In the active proselytizing minorities in whom selfish interests and public interests coincide lie the progress and development of America. Only through the active energy of the intelligent few can the public at large become aware of and act upon new ideas. Small groups of persons can, and do, make the rest of us think what they please about a given subject. But there are usually proponents and opponents of every propaganda, both of whom are equally eager to convince the majority. 
+ But clearly it is the intelligent minorities which need to make use of propaganda continuously and systematically. In the active proselytizing minorities in whom selfish interests and public interests coincide lie the progress and development of America. Only through the active energy of the intelligent few can the public at large become aware of and act upon new ideas. Small groups of persons can, and do, make the rest of us think what they please about a given subject. But there are usually proponents and opponents of every propaganda, both of whom are equally eager to convince the majority. -Propaganda by Edward Bernays (1928)
